# oro-jackson

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  flake.nix  justfile  package-lock.json  package.json  tailwind.config.js  tailwind.css  taskfile.yaml  todo.md
.github/workflows/: ci.yaml  cloudflare-pages.yaml
_static/: highlightjs.theme.css  style.css
_static/scripts/: file_tree.render.js  highlightjs.render.js  katex.render.js  mermaid.render.js  theme.control.js
default/: config.toml  theme.css
docs/: architecture.md  hosting.md  index.md
docs/plugins/: index.md
docs/plugins/emitters/: file_page.md  folder_page.md  index.md  static_assets.md
docs/plugins/transformers/: frontmatter.md  index.md  markdown.md  sanitize.md
nix/: package.nix  shell.nix
src/: cli.rs  config.rs  context.rs  error.rs  frontmatter.rs  lib.rs  main.rs  oj_file.rs  processors.rs  processors.rs.bak  tailwind.css  utils.rs
src/cli/: mod.rs
src/components/: children_list.rs  file_explorer.rs  mod.rs  navbar.rs
src/content/: mod.rs
src/context/: mod.rs
src/core/: app.rs  mod.rs
src/handlers/: mod.rs
src/helpers/: file_tree.rs
src/pages/: file_page.rs  folder_page.rs  mod.rs
src/plugins/: mod.rs
src/plugins/emitters/: file_page.rs  folder_page.rs  mod.rs  static_assets.rs
src/plugins/emitters/file_page/: mod.rs
src/plugins/emitters/folder_page/: mod.rs
src/plugins/emitters/static_assets/: mod.rs
src/plugins/transformers/: markdown.rs  mod.rs
src/plugins/transformers/frontmatter/: mod.rs
src/plugins/transformers/markdown/: mod.rs
src/plugins/transformers/sanitize/: mod.rs
src/processors/: emit.rs  parse.rs
src/server/: handlers.rs  mod.rs
src/templates/: mod.rs  routes.rs
src/utils/: file_tree.rs  mod.rs  tests.rs
src/web/: mod.rs
src/web/components/: button.rs
src/web/pages/: file_page.rs  folder_page.rs  mod.rs
static/: style.css
templates/: base.html  file.html  folder.html  page.html
templates/routes/: index.html  vault.html  vault_note.html
