[package]
name = "oro_jackson"
edition = "2021"

[lib]
name = "oro_jackson"
path = "src/lib.rs"

[[bin]]
name = "oro_jackson-bin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
axum-macros = "0.4.2"
askama = { version = "0.13.0" }
rust-embed="8.5.0"
mime_guess = "2.0.5"
serde = { version = "1.0.170", features = ["derive"] }
serde_json = "1.0.84"
uuid = { version = "1.10.0", features = ["v4"]}
time = "0.3"
urlencoding = "2.1.3"
rand = "0.8"
thiserror = "2"
pulldown-cmark = "0.13.0"
tempfile = "3"
hotwatch = "0.5.0"
ammonia = "4"
bon = "3.5.1"
