[package]
name = "oro_jackson"
version = "0.0.0"
edition = "2021"

[lib]
name = "oro_jackson"
path = "src/lib.rs"

[[bin]]
name = "oro-jackson"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
leptos = { version = "0.8.0", features = ["ssr"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
axum-macros = "0.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.22"
urlencoding = "2.1.3"
markdown = "1.0.0"
pulldown-cmark = "0.13.0"
hotwatch = "0.5.0"
ammonia = "4"
bon = "3.5"
walkdir = "2"
tower-livereload = "0.9.6"
rust-embed="8.6.0"
mime_guess = "2"
thiserror = "2"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.2.0"
pathdiff = "0.2.3"
